# curve-assets

./: .gitignore  .pre-commit-config.yaml  README.md  add uniETH Logo  all_networks.json  arbitrum.json  base.json  check_new_tokens.py  check_tokenlist.py  constants.py  curve_tokenlist.json  ethereum.json  failed_tokens_error_report.txt  failed_tokens_report.json  generate_curve_tokenlist.py  generate_list.py  gnosis.json  models.py  pr_checks.py  process.py  pull_request_template.md  pyproject.toml  sample_tokenlist.json  tokenlist_check_results.txt  upkeep.py  upload_tokenlist.py  utils.py  validate_schema.py
.github/workflows/: check-failed-tokens.yml  check-tokenlist.yml  pr-checks.yml  pr-tokenlist-update.yml  tokenlist-update.yml  update-token-list.yml  upload-tokenlist.yml
images/assets-fraxtal/: add-VNX-tokens  add-VNX-tokens-logos
images/images/: 0x1ded76F9f81f81De16C17bE38A316De27Bdcb9be
scripts/: constants.py  generate.py  models.py  pages.py  process.py  scan.py  upload.py  utils.py
